// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render normally 1`] = `
<Text
  numberOfLines={1}
  style={
    Array [
      Object {
        "backgroundColor": undefined,
        "color": "#000000",
        "fontFamily": "System",
        "fontSize": 13,
        "fontWeight": "700",
        "height": 13,
        "includeFontPadding": false,
        "lineHeight": 13,
        "margin": 15,
        "marginBottom": -10,
        "textAlignVertical": "center",
        "textTransform": "uppercase",
      },
      undefined,
    ]
  }
>
  title
</Text>
`;

exports[`should render with custom styles 1`] = `
<Text
  numberOfLines={1}
  style={
    Array [
      Object {
        "backgroundColor": undefined,
        "color": "#000000",
        "fontFamily": "System",
        "fontSize": 13,
        "fontWeight": "700",
        "height": 13,
        "includeFontPadding": false,
        "lineHeight": 13,
        "margin": 15,
        "marginBottom": -10,
        "textAlignVertical": "center",
        "textTransform": "uppercase",
      },
      Object {
        "color": "red",
      },
    ]
  }
>
  title
</Text>
`;
